--- a/StatiqConsoleApp/output/tags.html
+++ b/StatiqConsoleApp/output/tags.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>My Blog - My First Statiq page</title>
+  <title>My Blog - Tags</title>
 
-  <link rel="canonical" href="/">
+  <link rel="canonical" href="/tags">
 
       <link type="application/rss+xml" rel="alternate" href="/feed.rss" />
       <link type="application/atom+xml" rel="alternate" href="/feed.atom" />
@@ -17,9 +17,9 @@
   <meta name="msapplication-tooltip" content="My Blog" />
   <meta name="msapplication-starturl" content="/" />
 
-  <meta property="og:title" content="My Blog - My First Statiq page" />
+  <meta property="og:title" content="My Blog - Tags" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="/" />
+  <meta property="og:url" content="/tags" />
   
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -84,7 +84,7 @@
       <div class="col-md-12">
         <div class="site-heading">
           <h1>
-            My First Statiq page
+            Tags
           </h1>
         </div>
       </div>
@@ -96,8 +96,8 @@
   <div class="container"> 
     <div class="row">
       <div id="content" class="col-md-12">  
-        <h1 id="hello-world">Hello World!</h1>
-<p>Hello from my first Statiq page.</p>
+                <a role="button" href="/tags/examples" class="badge badge-light"> Examples (1)</a>
+        <a role="button" href="/tags/code" class="badge badge-light"> Code (1)</a>
 
       </div>
     </div>
