--- a/StatiqConsoleApp/output/tryout.html
+++ b/StatiqConsoleApp/output/tryout.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>My Blog - My First Statiq page</title>
+  <title>My Blog - This Is An Example Post</title>
 
-  <link rel="canonical" href="/">
+  <link rel="canonical" href="/tryout">
 
       <link type="application/rss+xml" rel="alternate" href="/feed.rss" />
       <link type="application/atom+xml" rel="alternate" href="/feed.atom" />
@@ -17,9 +17,9 @@
   <meta name="msapplication-tooltip" content="My Blog" />
   <meta name="msapplication-starturl" content="/" />
 
-  <meta property="og:title" content="My Blog - My First Statiq page" />
+  <meta property="og:title" content="My Blog - This Is An Example Post" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="/" />
+  <meta property="og:url" content="/tryout" />
   
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -84,8 +84,9 @@
       <div class="col-md-12">
         <div class="site-heading">
           <h1>
-            My First Statiq page
+            This Is An Example Post
           </h1>
+            <h2 class="subheading">Yay for examples!</h2>
         </div>
       </div>
     </div>
@@ -96,8 +97,7 @@
   <div class="container"> 
     <div class="row">
       <div id="content" class="col-md-12">  
-        <h1 id="hello-world">Hello World!</h1>
-<p>Hello from my first Statiq page.</p>
+        <p>This is my example blog post content.</p>
 
       </div>
     </div>
